<resources>
    <string name="app_name">Tuner</string>
    <string name="app_version">v1.0.0</string>
    <string name="app_settings">Ustawienia</string>
    <string name="app_refresh">Odśwież</string>
    <string name="app_tablature">Tabulatury</string>
    <string name="app_chord">Akordy</string>
    <string name="app_tuner">Stroik</string>
    <string name="app_dir">SDCard/tuner</string>
    <string name="app_ok">OK</string>
    <string name="app_frequency_unit">Hz</string>
    <string name="app_frequency">Częstotliwość</string>
    <string name="app_default_frequency">0</string>
    <string name="app_exit">Wciśnij wstecz aby wyjść</string>
    <string name="app_permission_external">Dostęp do pamięci jest potrzebny aby moć odczytać pliki</string>
    <string name="app_permission_audio">Dostęp do mikrofonu jest potrzebny aby moć rozróżniać dźwięk</string>

    <string name="btn_delete">Usuń</string>
    <string name="btn_close">Zamknij</string>
    <string name="btn_open">Otwórz</string>

    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>

    <string name="msg_err_external">Pamięć zewnętrzna nie jest dostępna</string>
    <string name="msg_err_dir">Katalog aplikacji nie został odnaleziony</string>
    <string name="msg_err_file">Nie ondnaleziono pliku</string>
    <string name="msg_err_files">Nie ondnaleziono plików</string>
    <string name="msg_err_delete">Nie udało się usunąć pliku</string>
    <string name="msg_err_permission">Uprawnienia nie zostały jeszcze nadane</string>
    <string name="msg_err_app">Nie odnaleziono aplikacji umożliwiającej wyświetlenie wybranego typu pliku</string>

    <string name="msg_suc_delete">Plik został usunięty</string>

    <string-array name="chords">
        <item>A</item>
        <item>E</item>
        <item>F</item>
        <item>B</item>
        <item>D</item>
        <item>D#</item>
        <item>G</item>
        <item>C</item>
        <item>C#</item>
        <item>H</item>
        <item>F#</item>
    </string-array>

    <string-array name="tuner_chords">
        <item>e&lt;sub&gt;2&lt;/sub&gt; 82.4 hz</item>
        <item>a&lt;sub&gt;2&lt;/sub&gt; 110.0 hz</item>
        <item>d&lt;sub&gt;3&lt;/sub&gt; 146.8 hz</item>
        <item>g&lt;sub&gt;3&lt;/sub&gt; 196.0 hz</item>
        <item>b&lt;sub&gt;3&lt;/sub&gt; 246.9 hz</item>
        <item>e&lt;sub&gt;4&lt;/sub&gt; 329.6 hz</item>
    </string-array>

</resources>
