<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/recycler_icon_size"
                android:layout_height="@dimen/recycler_icon_size"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_tablature"
                android:cropToPadding="true"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_file_pdf_red_24dp" />

            <TextView
                android:id="@+id/text_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_open"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="@dimen/list_text_size" />

            <Button
                android:id="@+id/btn_open"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/btn_open"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_delete"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_open"
                android:layout_alignBottom="@+id/btn_open"
                android:layout_toEndOf="@+id/btn_open"
                android:text="@string/btn_delete"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>